[package]
name = "delix"
version = "0.1.0"
authors = ["Philipp Brüll <bruell@simia.tech>"]
description = "Decentral HTTP proxy / load balancer"
homepage = "https://github.com/simia-tech/rust-delix"
repository = "https://github.com/simia-tech/rust-delix"
readme = "README.md"
keywords = [ "http", "proxy", "decentral" ]
license = "Apache-2.0"

[dependencies]
ansi_term = "0.7"
byteorder = "0.4"
getopts = "0.2"
log = "0.3"
protobuf = "1.0"
rand = "0.3"
rust-crypto = "0.2"
rustc-serialize = "0.3"
time = "0.1"
toml = "0.1"

[dev-dependencies]
hyper = "0.7"

[[bin]]
name = "delix"
path = "src/main.rs"
doc = false

[lib]
name = "delix"
path = "src/lib.rs"
